@@ -1,3 +1,13 @@
+tasks.named('bootRun') {
+    jvmArgs = [
+        '-XX:+UseContainerSupport',
+        '-XX:MaxRAMPercentage=75.0',
+        '-Xms256m',
+        '-Xmx1g',
+        '-Xlog:gc*:stdout:time,level,tags',
+    ]
+}
+
 dependencies {
     implementation project(':libs:common-core')
     implementation project(':libs:common-event')
@@ -6,6 +16,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
